--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
    
@@ -13,7 +14,7 @@
     <div id="root">
         Not rendered
     </div>
-
+    <script src="https://cdn.tailwindcss.com"></script>
 </body>
 
 <script type="module" src="./src/App.js"></script>
