--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>React</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>
+        BringMe
+    </title>
+    <script src="https://accounts.google.com/gsi/client" async defer>
+
+    </script>
 </head>
 <body>
    
